Update 01. No credentials.md

--- a/01. No credentials.md
+++ b/01. No credentials.md
@@ -2,12 +2,18 @@
 
 # Scan network
 
-cme smb <ip_range> # enumerate smb hosts
-nmap -sP -p <ip> # ping scan
+cme smb <ip_range>
+
+nmap -sP -p <ip>
+ 
 nmap -PN -sV --top-ports 50 --open <ip> # quick scan
+
 nmap -PN --script smb-vuln* -p139,445 <ip> # search smb vuln
+
 nmap -PN -sC -sV -oA <output> <ip> # classic scan
+ 
 nmap -PN -sC -sV -p- -oA <output> <ip> # full scan
+ 
 nmap -sU -sC -sV -oA <output> <ip> # udp scan
 
 # Find DC IP
